-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.3
-
None
-
-
89a25a3ef169cb42c54ef1ddcb28f70b24f923ab
When cloning font engines on Freetype and using the cloned engines in QTextLayout, they may end up being cached in the QFontCache.
Use the example in QT3DS-3617 to reproduce. Run it with Freetype on any platform, and you should see the memory grow really quickly per frame. What happens is that the text engine will create a multi font engine to contain the QRawFont engine and add this to the cache, probably as a work-around for something which does not work properly without a multi engine.
Now, this is unnecessary in itself (maybe it should check if the font engine itself is cached and skip this skep if it is not). But on Windows GDI, the font engines are flushed from the cache when it grows too big, so the memory never grows beyond a certain point. On Freetype this doesn't happen, presumably because it thinks there are references to them. So it might be about some differences in how the initial references are set up on Freetype versus what is expected.
For Gerrit Dashboard: QTBUG-76219 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
264475,2 | Don't count all engines as "in use" in cache | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |